change pointer bool for bool
